execução do projeto e adicionado end na linha 13 e aspas na linha 17 no arquivo app\templates\app\index.html

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -10,9 +10,9 @@
     <input type="button" id="button" class="btn btn-primary" value="Enter">
     {% endbuttons %}
 </div>
-{% block content %}
+{% endblock content %}
 
 {% bootstrap_javascript jquery='full' %}
 {% block js %}
-<script src="{% static 'js/index.js %}"></script>
+<script src="{% static 'js/index.js' %}"></script>
 {% endblock js %}
